[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Cube.png" type="Texture" id=1]
[ext_resource path="res://scripts/EnemyCore.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 133.333, 133.333 )

[node name="EnemyCore" type="Sprite"]
modulate = Color( 1, 0.254902, 0.305882, 1 )
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="." groups=[
"enemy",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
